--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.24.3",
     "axios": "^1.8.3",
     "echarts": "^5.6.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.0"
